🤙 Fixed weird spacing in the online count

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -56,7 +56,7 @@
   color: white;
   box-shadow: 0 3px 19px 0 rgba(0, 0, 0, 0.05);
   text-align: center;
-  padding: 15px;
+  padding: 1.3em 0;
   font-size: 1em;
   border-radius: 0.4em 0.4em 0 0;
   margin-bottom: 0;
